--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -267,9 +267,7 @@
                                         }
                                         @if (SessionFacade.CurrentUser.CreateSubCasePermission == 1 && SessionFacade.CurrentUser.MergeCasePermission == 1)
                                         {
-                                            @*<li>@Html.ActionLink(Translation.GetCoreTextTranslation("Sammanfoga"), "MergeCase", new { parentCaseId = Model.case_.Id })</li>*@
-                                            var merged = Model.IsItMergedChild();
-                                            if (!merged)
+                                            if (!Model.IsItMergedChild() && !Model.IsItMergedParent())
                                             {
                                                 <li><a data-toggle="modal" id="merge_case_to_parent" href="#">@Translation.GetCoreTextTranslation("Sammanfoga")</a></li>
                                                 @Html.HiddenFor(m => m.case_.Id, new { @id = "merge_to_parent" })
