#240545 - Bug - ncorrect semicolon for Loginpage

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -23,7 +23,7 @@
             if (TempData["LoginFailed"] != null)
             {
                 <div class="alert alert-error">
-                    @TempData["LoginFailed"];
+                    @TempData["LoginFailed"]
                 </div>
             }
             @(Translation.Get("Username") + ":")<br />
